hphp/test/quick/yield_final.php.expectf

Fatal error: Cannot override final method A::%Smethod1%S() in %s on line 4
